have client talking to api and showing correctly, removed the pluralize on client

--- a/DeezKnuxClient/app/knux-phrases/template.hbs
+++ b/DeezKnuxClient/app/knux-phrases/template.hbs
@@ -1,4 +1,4 @@
-{{#each modal as |knux|}}
-    {{knux.knuxValue}}
-    {{knux.owner}}
+<h1>Deez Knux should be showing below:</h1>
+{{#each model as |knux|}}
+    <li>{{knux.knuxvalue}}</li>
 {{/each}}
